<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin = "@dimen/activity_margin"
    tools:context="edu.wvup.acottri9.conversions.MainActivity" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:text="@string/label_amount"
            android:padding="10dip" />
        <TextView
            android:id="@+id/amount"
            android:text="@string/amount" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:text="@string/label_mode"
            android:padding="10dip" />
        <TextView
            android:id="@+id/mode"
            android:text="@string/mode" />
    </TableRow>

    <!-- red line -->
    <View
        android:layout_height="5dip"
        android:background="#FF0000" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:text="@string/label_total"
            android:padding="10dip" />
        <TextView
            android:id="@+id/total"
            android:text="@string/total" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50dip" >
        <Button
            android:text="@string/modify_data"
            android:onClick="modifyData" />
    </TableRow>

</TableLayout>